fixed navbar for mobile and footer links

--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -18,6 +18,7 @@
 
       </ul>
       <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Yoolhyun</a>
+        <a href="#!" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <div class='navbar-right'>
           <ul class="right hide-on-med-and-down">
             <li><a href="/" class='title'>Home</a></li>
@@ -38,14 +39,19 @@
                 <div class='nav-space'>상담 및 의뢰</div>Consultation
               </a></li>
           </ul>
-          <ul id="nav-mobile" class="sidenav">
-            <li><a href="#">Navbar Link</a></li>
-          </ul>
-        </div>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      </div>
     </nav>
   </div>
+    <ul class="sidenav" id="mobile-demo">
+              <li><a href="/">Home</a></li>
+              <li><a href="/about">Lawyer Yoon</a></li>
+              <li><a href="/contract">Contract</a></li>
+              <li><a href="/criminal">Criminal</a></li>
+              <li><a href="/family">Family</a></li>
+              <li><a href="/inheritance">Inheritance</a></li>
+              <li><a href="/taxes">Taxes</a></li>
+              <li><a href="/resources">Resources</a></li>
+              <li><a href="/consultation">Consultation</a></li>
+    </ul>
 </header>
 
 {{!-- Main body Content Wrapped in Carousel --}}
@@ -126,18 +132,18 @@
   <div class="container">
     <div class="row">
       <div class="col s5">
-        <h5 class="white-text"><a class="grey-text" href="#!">About</a></h5>
+        <h5 class="white-text"><a class="grey-text" href="/intro">About</a></h5>
       </div>
       <div class="col s5">
-        <h5 class="white-text"><a class="grey-text" href="#!">Contact</a></h5>
+        <h5 class="white-text"><a class="grey-text" href="/consultation">Contact</a></h5>
 
       </div>
       <div class="col s2">
-        <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
+        <h5 class="white-text"><a class="grey-text" href="/resources">Resources</a></h5>
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: yoolhyunlaw@gmail.com
+      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
