--- a/views/resources/resources.handlebars
+++ b/views/resources/resources.handlebars
@@ -7,7 +7,7 @@
         <li><a class='white-text' href="/seoul">율현 서울사무소</a></li>
         <li><a class='white-text' href="/atlanta">율현 아틀란타 사무소</a></li>
       </ul>
-            <!-- Dropdown Structure -->
+      <!-- Dropdown Structure -->
       <ul id="dropdown2" class="dropdown-content #757575 grey darken-1">
         <li><a class='white-text' href="/intro">Intro</a></li>
         <li><a class='white-text' href="/contract">Contract</a></li>
@@ -18,25 +18,40 @@
 
       </ul>
       <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Yoolhyun</a>
+        <a href="#!" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <div class='navbar-right'>
           <ul class="right hide-on-med-and-down">
             <li><a href="/" class='title'>Home</a></li>
-            <li><a class="dropdown-trigger" data-target="dropdown1"><div class='nav-space'>법률사무소</div> 
-            Law Office
-            </a></li>
-            <li><a href="/about" class='title'><div class='nav-space'>윤배경변호사</div>Lawyer Yoon</a></li>
-            <li><a class="dropdown-trigger" data-target="dropdown2"><div class='nav-space'>업무분야</div>Practice Areas</a></li>
-            <li><a href="/resources" class='title'><div class='nav-space'>법률자료실</div>Resources</a></li>
-            <li><a href="/consultation" class='title'><div class='nav-space'>상담 및 의뢰</div>Consultation</a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown1">
+                <div class='nav-space'>법률사무소</div>
+                Law Office
+              </a></li>
+            <li><a href="/about" class='title'>
+                <div class='nav-space'>윤배경변호사</div>Lawyer Yoon
+              </a></li>
+            <li><a class="dropdown-trigger" data-target="dropdown2">
+                <div class='nav-space'>업무분야</div>Practice Areas
+              </a></li>
+            <li><a href="/resources" class='title'>
+                <div class='nav-space'>법률자료실</div>Resources
+              </a></li>
+            <li><a href="/consultation" class='title'>
+                <div class='nav-space'>상담 및 의뢰</div>Consultation
+              </a></li>
           </ul>
-          <ul id="nav-mobile" class="sidenav">
-            <li><a href="#">Navbar Link</a></li>
-          </ul>
-        </div>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      </div>
     </nav>
   </div>
+    <ul class="sidenav" id="mobile-demo">
+              <li><a href="/">Home</a></li>
+              <li><a href="/about">Lawyer Yoon</a></li>
+              <li><a href="/contract">Contract</a></li>
+              <li><a href="/criminal">Criminal</a></li>
+              <li><a href="/family">Family</a></li>
+              <li><a href="/inheritance">Inheritance</a></li>
+              <li><a href="/taxes">Taxes</a></li>
+              <li><a href="/resources">Resources</a></li>
+              <li><a href="/consultation">Consultation</a></li>
+    </ul>
 </header>
 
 {{!-- Main body Content Wrapped in Carousel --}}
@@ -568,18 +583,18 @@
   <div class="container">
     <div class="row">
       <div class="col s5">
-        <h5 class="white-text"><a class="grey-text" href="#!">About</a></h5>
+        <h5 class="white-text"><a class="grey-text" href="/intro">About</a></h5>
       </div>
       <div class="col s5">
-        <h5 class="white-text"><a class="grey-text" href="#!">Contact</a></h5>
+        <h5 class="white-text"><a class="grey-text" href="/consultation">Contact</a></h5>
 
       </div>
       <div class="col s2">
-        <h5 class="white-text"><a class="grey-text" href="#!">Resources</a></h5>
+        <h5 class="white-text"><a class="grey-text" href="/resources">Resources</a></h5>
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 719 9824 | Email: yoolhyunlaw@gmail.com
+      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
