--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -56,7 +56,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/panorama_one.jpg' class='overhead-image' />
+  <img src='/assets/images/Background/panorama_one.jpg' class='overhead-image-about' />
   <div class='main-content'>
     <div class='row'>
       <h2>변호사 이력서</h2>
@@ -90,7 +90,7 @@
 
       </div>
       <div class='col s4'>
-          <img src='/assets/images/Lawyer/윤배경사진1.jpg' class='profile-image' />
+          <img src='/assets/images/Lawyer/윤배경사진1.jpg' class='profile-image-about' />
       </div>
     </div>
   </div>
@@ -112,7 +112,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
