--- a/views/legal/inheritance.handlebars
+++ b/views/legal/inheritance.handlebars
@@ -1,4 +1,4 @@
-{{{!-- Navbar --}}
+{{!-- Navbar --}}
 <header>
   <div class='navbar-fixed'>
     <nav class="#757575 grey darken-1" role="navigation" id='top-nav'>
@@ -56,7 +56,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/panorama_two.jpg' class='overhead-image-contract' />
+  <img src='/assets/images/Background/panorama_two.jpg' class='overhead-image-inheritance' />
   <div class='main-content'>
     <div class='row'>
       <h2>상속 분쟁</h2>
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
