--- a/views/office/atlanta.handlebars
+++ b/views/office/atlanta.handlebars
@@ -56,7 +56,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/atlanta.jpg' class='overhead-image' />
+  <img src='/assets/images/Background/atlanta.jpg' class='overhead-image-atl' />
   <div class='main-content'>
     <h2>율현 아틀란타 사무소</h2>
     <p class='main-text'>
@@ -83,7 +83,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
