--- a/views/resources/resources.handlebars
+++ b/views/resources/resources.handlebars
@@ -594,7 +594,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
