--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -63,8 +63,8 @@
       {{msg}}
       <div class="row">
         <div class='col s12 center'>
-          <p class='consult'>tel: +1 (404) 719-9824</p>
-          <p class='consult'>yoolhyunlaw@gmail.com</p>
+          <p class='consult'>Tel: +1 (404)-764-8795</p>
+          <p class='consult'>Email: Yoolhyunlaw@gmail.com</p>
         </div>
       </div>
       <div class="row">
@@ -143,7 +143,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
