--- a/views/legal/intro.handlebars
+++ b/views/legal/intro.handlebars
@@ -56,7 +56,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/panorama_two.jpg' class='overhead-image' />
+  <img src='/assets/images/Background/panorama_two.jpg' class='overhead-image-intro' />
   <div class='main-content'>
     <div class='row'>
       <h2>변호사 인사말</h2>
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
