--- a/views/legal/taxes.handlebars
+++ b/views/legal/taxes.handlebars
@@ -56,7 +56,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/panorama_two.jpg' class='overhead-image-contract' />
+  <img src='/assets/images/Background/panorama_two.jpg' class='overhead-image-taxes' />
   <div class='main-content'>
     <div class='row'>
       <h2>세금 문제</h2>
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
