--- a/views/office/seoul.handlebars
+++ b/views/office/seoul.handlebars
@@ -56,7 +56,7 @@
 
 {{!-- Main body Content Wrapped in Carousel --}}
 <main>
-  <img src='/assets/images/Background/city_three.jpg' class='overhead-image' />
+  <img src='/assets/images/Background/city_three.jpg' class='overhead-image-seoul' />
   <div class='main-content'>
     <br><br><br>
     <h2>율현 서울사무소</h2>
@@ -65,7 +65,8 @@
       <p class='main-text-seoul'>대표변호사로 하여 설립된 Law Firm입니다.</p>
       <p class='main-text-seoul'>민/형사와 같은 일반 사건을 처리하고 있음은 물론이고 금융, 조세, 건설, 해상보험과 같은 전문적인 영역에도 탁월한 지식과 다양한 경험을 바탕으로 법률자문을 수행하고 있습니다.</p>
       <br>
-      <a href='http://yoolhyun.com/' target='_blank' rel="noopener noreferrer">(www.yoolhyun.com) </a>
+      <a href='http://yoolhyun.com/' target='_blank' rel="noopener noreferrer" id='seoul-link'>(www.yoolhyun.com) </a>
+      <br><br><br>
     </p>
   </div>
 </main>
@@ -86,7 +87,7 @@
       </div>
     </div>
     <div class="container center white-text">
-      copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
+      Copyright ⓒ Law Firm of Yoolhyun | Tel: +1 (404) 764 8795 | Email: yoolhyunlaw@gmail.com
     </div>
   </div>
 </footer>
