--- a/views/legal/intro.handlebars
+++ b/views/legal/intro.handlebars
@@ -43,7 +43,10 @@
   </div>
     <ul class="sidenav" id="mobile-demo">
               <li><a href="/">Home</a></li>
+              <li><a href="/intro">Introduction</a></li>
               <li><a href="/about">Lawyer Yoon</a></li>
+              <li><a href="/seoul">Seoul Office</a></li>
+              <li><a href="/atlanta">Atlanta Office</a></li>
               <li><a href="/contract">Contract</a></li>
               <li><a href="/criminal">Criminal</a></li>
               <li><a href="/family">Family</a></li>
@@ -61,7 +64,7 @@
     <div class='row'>
       <h2>변호사 인사말</h2>
       <div class='col s4'>
-        <img src='/assets/images/Lawyer/윤배경사진2.jpg' class='profile-image2' />
+        <img src='/assets/images/Lawyer/윤배경사진2.jpg' class='profile-image-intro' />
       </div>
       <div class='col s8 main-text'>
         <br><br><br><br>
