--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
 		<link type="text/css" rel="stylesheet" href="/assets/css/materialize.css"  media="screen,projection"/>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<link rel="stylesheet" href="/assets/css/mediaquery.css" type="text/css" />
-
+		<link rel="stylesheet" href="/assets/css/mediaqueryLaptop.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/mediaqueryIPhone.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body>
