--- a/views/legal/criminal.handlebars
+++ b/views/legal/criminal.handlebars
@@ -42,8 +42,11 @@
     </nav>
   </div>
     <ul class="sidenav" id="mobile-demo">
-              <li><a href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
+              <li><a href="/intro">Introduction</a></li>
               <li><a href="/about">Lawyer Yoon</a></li>
+              <li><a href="/seoul">Seoul Office</a></li>
+              <li><a href="/atlanta">Atlanta Office</a></li>
               <li><a href="/contract">Contract</a></li>
               <li><a href="/criminal">Criminal</a></li>
               <li><a href="/family">Family</a></li>
