--- a/views/consultation.handlebars
+++ b/views/consultation.handlebars
@@ -56,14 +56,37 @@
               <li><a href="/consultation">Consultation</a></li>
     </ul>
 </header>
-
+<form action="/send" method="post">
+  <ul class="inputs">
+    <li>
+      <label for="from">From</label>
+      <input type="text" id="from" name="from" />
+    </li>
+    <li>
+      <label for="to">To</label>
+      <input type="text" id="to" name="to" />
+    </li>
+    <li>
+      <label for="date">Date</label>
+      <input type="date" id="date" name="date" />
+    </li>
+    <li>
+      <label for="time">Time</label>
+      <input type="time" id="time" name="time" />
+    </li>
+    <li>
+      <button>Request</button>
+    </li>
+  </ul>
+</form>
 {{!-- Main body Content Wrapped in Carousel --}}
-<main>
+
+{{!-- <main>
   <br><br><br><br><br>
   <div class="container">
     <div class="col m10 offset-m1 s12">
       <h2 class="center-align">For Consultation</h2>
-      {{msg}}
+      
       <div class="row">
         <div class='col s12 center'>
           <p class='consult'>Tel: +1 (404)-764-8795</p>
@@ -128,7 +151,7 @@
   </div>
   </div>
   </form>
-</main>
+</main> --}}
 
 {{!-- Footer --}}
 <footer class="page-footer #757575 grey darken-1 footer-size">
